...

    var title: String {
        switch self {
        case .workouts:
            return "Workouts"
        case .exercises:
            return "Exercises"
        }
    }
}

enum HistoryRoute: Hashable {
    case workout(UUID)
...
